Geometry Nodes: Viewer sees handle type update after its connection point #113429

Closed
opened 2023-10-08 22:19:53 +02:00 by Marek Smoliński · 0 comments

I tested the on Blender 3.6.0, 3.6.2 and 4.0β

How to reproduce:

  • create a curve object (must be a curve, not mesh)
  • add a geometry nodes modifier
  • create a setup like above (GIF) / below (ascii diagram)
  • try muting and unmuting the "Set Handle Type" node, to see the Viewer is affected.
                                             +--------+
                                          -->| Viewer |
                                         /   +--------+
                                        / 
+---------------+   +-----------------+/  +-----------------+   +--------------+
| Curve Circle  |-->| Set Spline Type |-->| Set Handle Type |-->| Group Output |
| Resolution: 3 |   | Bezier          |   | Auto            |   | Bezier       |
+---------------+   +-----------------+   +-----------------+   +--------------+

Somehow muting the "Set Handle Type" node affects what the "Viewer" sees, even though it's connected before it.

I tested the on Blender 3.6.0, 3.6.2 and 4.0β <img src="https://i.imgur.com/K4suyn6.gif" /> How to reproduce: - create a curve object (must be a curve, not mesh) - add a geometry nodes modifier - create a setup like above (GIF) / below (ascii diagram) - try muting and unmuting the "Set Handle Type" node, to see the Viewer is affected. ``` +--------+ -->| Viewer | / +--------+ / +---------------+ +-----------------+/ +-----------------+ +--------------+ | Curve Circle |-->| Set Spline Type |-->| Set Handle Type |-->| Group Output | | Resolution: 3 | | Bezier | | Auto | | Bezier | +---------------+ +-----------------+ +-----------------+ +--------------+ ``` Somehow muting the "Set Handle Type" node affects what the "Viewer" sees, even though it's connected before it.
Marek Smoliński added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-10-08 22:19:54 +02:00
Iliya Katushenock added this to the 3.6 LTS milestone 2023-10-08 22:24:11 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-15 20:59:36 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113429
No description provided.