source/blender/nodes/geometry/nodes/node_geo_curve_set_handle_type.cc
@@ -69,6 +69,8 @@ static void set_handle_type(bke::CurvesGeometry &curves,
     curves.handle_types_right_for_write().fill_indices(selection.indices(), new_handle_type);
   }
 
+  curves.tag_topology_changed();
+
   /* Eagerly calculate automatically derived handle positions if necessary. */
   if (ELEM(new_handle_type, BEZIER_HANDLE_AUTO, BEZIER_HANDLE_VECTOR, BEZIER_HANDLE_ALIGN)) {
     curves.calculate_bezier_auto_handles();
